--- a/SpringbootDashbord/src/main/resources/application.properties
+++ b/SpringbootDashbord/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=SpringbootDashbord
  # Port for the Admin Server
 server.port=8082
-spring.boot.admin.client.url=http://localhost:8082
+spring.boot.admin.client.url=https://avsofttechnologies.com:8082
 management.endpoints.web.exposure.include=*
+
+
+server.ssl.enabled=true
+server.ssl.key-store=classpath:avsofttechnologies.com.p12
+server.ssl.key-store-password=1234
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=tomcat
