--- a/SpringbootDashbord/src/main/resources/application.properties
+++ b/SpringbootDashbord/src/main/resources/application.properties
@@ -2,7 +2,11 @@ spring.application.name=SpringbootDashbord
  # Port for the Admin Server
 server.port=8082
 spring.boot.admin.client.url=https://avsofttechnologies.com:8082
+spring.boot.admin.client.instance.service-url=https://avsofttechnologies.com
+
 management.endpoints.web.exposure.include=*
+
+management.endpoint.health.show-details=always
 
 
 server.ssl.enabled=true
